--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,300;0,600;1,400&family=Barlow:wght@300;400;600&family=Karla:ital,wght@0,300;0,400;0,600;0,700;1,300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600;700;800&family=Karla:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
 
